--- a/index.html
+++ b/index.html
@@ -3,34 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Article preview component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link type="text/css" rel="stylesheet" href="css/style.css">
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <article class="wrapper">
+    <div class="component">
+      <div class="component-image">
+        <img class="component-main-image" src="./images/drawers.jpg" alt="A drawer image" />
+      </div>
+      <div class="component-content">
+        <div class="component-info">
+          <h1 class="component-title">Shift the overall look and feel by adding these wonderful 
+            touches to furniture in your home
+          </h1>
+          <p class="component-except">Ever been in a room and felt like something was missing? Perhaps 
+            it felt slightly bare and uninviting. I’ve got some simple tips 
+            to help you make any room feel complete.
+          </p>
+        </div> <!-- component-info ends here -->
+        <div class="component-profile">
+          <div class="profile-image">
+            <img class="profile-image" src="./images/avatar-michelle.jpg" alt="A lady called Michelle" />
+            <div class="profile-details">
+              <p class="name">Michelle Appleton</p>
+              <p class="date">28 Jun 2020</p>
+            </div>
+            <div class="component-share-icon">
+              <img class="share-icon" src="./images/icon-share.svg" alt="A share-icon" />
+            </div>
+          </div>
+          <div class="component-social-platforms">
+            <p class="share-text">Share</p>
+            <img class="social-platform" src="./images/icon-facebook.svg" alt="Facebook" />
+            <img class="social-platform" src="./images/icon-twitter.svg" alt="Twitter" />
+            <img class="social-platform" src="./images/icon-pinterest.svg" alt="Pinterest" />
+          </div>
+        </div> <!-- component-profile ends here -->
+      </div> <!-- component-content ends here -->
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Doina</a>.
+      </div>
+    </div> <!-- component ends here -->
+  </article>
 </body>
 </html>
