Added custom properties and utility classes

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <article class="wrapper">
+  <article class="component-wrapper">
     <div class="component">
       <div class="component-image">
         <img class="component-main-image" src="./images/drawers.jpg" alt="A drawer image" />
       </div>
       <div class="component-content">
         <div class="component-info">
-          <h1 class="component-title">Shift the overall look and feel by adding these wonderful 
+          <h1 class="component-title text-dark">Shift the overall look and feel by adding these wonderful 
             touches to furniture in your home
           </h1>
-          <p class="component-except">Ever been in a room and felt like something was missing? Perhaps 
+          <p class="component-excerpt text-desaturated">Ever been in a room and felt like something was missing? Perhaps 
             it felt slightly bare and uninviting. I’ve got some simple tips 
             to help you make any room feel complete.
           </p>
