Styled the profile part

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div> <!-- component-info ends here -->
         <div class="component-profile">
           <div class="profile-image">
-            <img class="profile-image" src="./images/avatar-michelle.jpg" alt="A lady called Michelle" />
+            <img class="profile-image-avatar" src="./images/avatar-michelle.jpg" alt="A lady called Michelle" />
             <div class="profile-details">
-              <p class="name">Michelle Appleton</p>
-              <p class="date">28 Jun 2020</p>
+              <p class="name text-dark">Michelle Appleton</p>
+              <p class="date text-desaturated">28 Jun 2020</p>
             </div>
             <div class="component-share-icon">
               <img class="share-icon" src="./images/icon-share.svg" alt="A share-icon" />
