Styled the mobile active state

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <article class="component-wrapper">
     <div class="component">
       <div class="component-image">
-        <img class="component-main-image" src="./images/drawers.jpg" alt="A drawer image" />
+        <img class="component-main-image" src="./images/drawers.jpg" alt="A drawer image">
       </div>
       <div class="component-content">
         <div class="component-info">
@@ -30,20 +30,23 @@
         </div> <!-- component-info ends here -->
         <div class="component-profile">
           <div class="profile-image">
-            <img class="profile-image-avatar" src="./images/avatar-michelle.jpg" alt="A lady called Michelle" />
+            <img class="profile-image-avatar" src="./images/avatar-michelle.jpg" alt="A lady called Michelle">
             <div class="profile-details">
               <p class="name text-dark">Michelle Appleton</p>
               <p class="date text-desaturated">28 Jun 2020</p>
             </div>
             <div class="component-share-icon">
-              <img class="share-icon" src="./images/icon-share.svg" alt="A share-icon" />
+              <img class="share-icon" src="./images/icon-share.svg" alt="A share-icon">
             </div>
           </div>
-          <div class="component-social-platforms">
-            <p class="share-text">Share</p>
-            <img class="social-platform" src="./images/icon-facebook.svg" alt="Facebook" />
-            <img class="social-platform" src="./images/icon-twitter.svg" alt="Twitter" />
-            <img class="social-platform" src="./images/icon-pinterest.svg" alt="Pinterest" />
+          <div id="active" class="component-social-platforms">
+            <p class="share-text text-grayish-blue">Share</p>
+            <img class="social-platform" src="./images/icon-facebook.svg" alt="Facebook">
+            <img class="social-platform" src="./images/icon-twitter.svg" alt="Twitter">
+            <img class="social-platform" src="./images/icon-pinterest.svg" alt="Pinterest">
+            <div class="component-share-icon-active">
+              <img class="share-icon-2" src="./images/share-solid.svg" alt="A share-icon">
+            </div>
           </div>
         </div> <!-- component-profile ends here -->
       </div> <!-- component-content ends here -->
