Added the functionality to share icon

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
               <p class="date text-desaturated">28 Jun 2020</p>
             </div>
             <div class="component-share-icon">
-              <img class="share-icon" src="./images/icon-share.svg" alt="A share-icon">
+              <img id="share-icon" src="./images/icon-share.svg" alt="A share-icon">
             </div>
           </div>
-          <div id="active" class="component-social-platforms">
+          <div id="active" class="component-social-platforms active-state">
             <p class="share-text text-grayish-blue">Share</p>
             <img class="social-platform" src="./images/icon-facebook.svg" alt="Facebook">
             <img class="social-platform" src="./images/icon-twitter.svg" alt="Twitter">
             <img class="social-platform" src="./images/icon-pinterest.svg" alt="Pinterest">
             <div class="component-share-icon-active">
-              <img class="share-icon-2" src="./images/share-solid.svg" alt="A share-icon">
+              <img id="share-icon-2" src="./images/share-solid.svg" alt="A share-icon">
             </div>
           </div>
         </div> <!-- component-profile ends here -->
@@ -57,5 +57,7 @@
       </div>
     </div> <!-- component ends here -->
   </article>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
